Fixed nav bar text size on small screen

--- a/css/LBC.css
+++ b/css/LBC.css
@@ -791,6 +791,15 @@ By ADAMSCHWARTZ
 .delay4{
   animation-delay: 1.1s;
 }
+
+/* Nav bar Size */
+@media screen and (max-width:992px) {
+  .navbar-default .navbar-nav > li > a {
+    font-size: 10px;
+  }
+}
+
+
 /*Size of font next to map*/
 @media screen and (max-width:414px) {
   .contact-us{
